--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "jquery": "~2.1.4",
     "lodash": "~3.10.1",
     "bootstrap": "~3.3.5",
-    "bootstrap-css": "~3.3.4"
+    "bootstrap-css": "~3.3.4",
+    "ng-file-upload": "~6.1.0"
   },
   "resolutions": {
     "angular": "~1.3.x"
