--- a/package.json
+++ b/package.json
@@ -8,14 +8,18 @@
   "dependencies": {
     "body-parser": "^1.13.3",
     "compression": "^1.5.2",
+    "connect-multiparty": "^2.0.0",
     "cookie-parser": "^1.3.3",
+    "debug": "^2.2.0",
     "express": "^4.13.3",
     "glob": "^5.0.3",
     "jade": "^1.11.0",
     "lodash": "^3.10.1",
+    "lwip": "0.0.7",
     "method-override": "^2.3.0",
     "mongoose": "^4.1.2",
     "morgan": "^1.6.1",
+    "path": "^0.11.14",
     "resemblejs": "^1.3.0",
     "serve-favicon": "^2.3.0"
   },
