--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "connect-multiparty": "^2.0.0",
     "cookie-parser": "^1.3.3",
     "debug": "^2.2.0",
+    "errorhandler": "^1.4.2",
     "express": "^4.13.3",
     "glob": "^5.0.3",
     "jade": "^1.11.0",
