--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "mongoose": "^4.1.2",
     "morgan": "^1.6.1",
     "path": "^0.11.14",
+    "query": "^0.2.0",
     "resemblejs": "^1.3.0",
-    "serve-favicon": "^2.3.0"
+    "serve-favicon": "^2.3.0",
+    "url": "^0.10.3"
   },
   "devDependencies": {
     "gulp": "^3.9.0",
