--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "async": "^1.4.2",
     "body-parser": "^1.13.3",
     "compression": "^1.5.2",
     "connect-multiparty": "^2.0.0",
