--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "lodash": "~3.10.1",
     "bootstrap": "~3.3.5",
     "bootstrap-css": "~3.3.4",
-    "ng-file-upload": "~6.1.0"
+    "ng-file-upload": "~6.1.0",
+    "resemblejs": "~1.3.0"
   },
   "resolutions": {
     "angular": "~1.3.x"
