--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,9 @@
     "bootstrap": "~3.3.5",
     "bootstrap-css": "~3.3.4",
     "ng-file-upload": "~6.1.0",
-    "resemblejs": "~1.3.0"
+    "resemblejs": "~1.3.0",
+    "angular-keyboard": "~0.3.1",
+    "ng-img-crop": "~0.3.2"
   },
   "resolutions": {
     "angular": "~1.3.x"
