--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^4.1.2",
     "morgan": "^1.6.1",
     "path": "^0.11.14",
+    "promise": "^7.0.4",
     "query": "^0.2.0",
     "resemblejs": "^1.3.0",
     "serve-favicon": "^2.3.0",
